[package]
name = "proxy-benchmark"
version = "0.1.0"
authors = ["Geoffroy Couprie <geo.couprie@gmail.com>"]

[dependencies]
pretty_env_logger = "0.1"
hyper = {git = "https://github.com/hyperium/hyper" }
#hyper = "^0.11"
tokio-core = "0.1.6"
tokio-proto = "0.1"
tokio-service = "0.1"
tokio-io = "0.1"
futures = "0.1.14"
futures-cpupool = "0.1.6"
csv = "1.0.0-beta.5"

